--- a/codigo/GestionHotelera/Views/EmpresaHospedaje/VerFacturaciones.cshtml
+++ b/codigo/GestionHotelera/Views/EmpresaHospedaje/VerFacturaciones.cshtml
@@ -201,6 +201,11 @@
                 }
             </div>
 
+            <div class="filtro-fechas">
+                <input type="date" id="fechaInicioRango" name="FechaInicioTipos" style="margin-right: 10px;" required />
+                <input type="date" id="fechaFinRango" name="FechaFinTipos" required />
+            </div>
+
             <button class="buscar-btn" type="submit" >Consultar</button>
 
         </form>
