--- a/codigo/GestionHotelera/Views/EmpresaHospedaje/AñadirTipoHabitacion.cshtml
+++ b/codigo/GestionHotelera/Views/EmpresaHospedaje/AñadirTipoHabitacion.cshtml
@@ -57,7 +57,7 @@
 
         <div style="display: flex; justify-content: center; gap: 20px;">
             <button type="submit" class="btn btn-success" style="padding: 10px 30px;">Guardar</button>
-            <a href="/EmpresaHospedaje/Menu" class="btn btn-danger" style="padding: 10px 30px;">Cancelar</a>
+            <a href="/EmpresaHospedaje/Menu?idEmpresa=no" class="btn btn-danger" style="padding: 10px 30px;">Cancelar</a>
         </div>
     </form>
 </div>
