--- a/codigo/GestionHotelera/Views/EmpresaHospedaje/EditarHabitacion.cshtml
+++ b/codigo/GestionHotelera/Views/EmpresaHospedaje/EditarHabitacion.cshtml
@@ -27,7 +27,7 @@
 
         <div style="display: flex; justify-content: space-between;">
             <button type="submit" style="background-color: #28a745; color: white; padding: 10px 25px; border: none; border-radius: 5px; font-weight: bold;">Guardar</button>
-            <a href="/EmpresaHospedaje/Menu" style="background-color: #c0392b; color: white; padding: 10px 25px; border-radius: 5px; text-decoration: none; font-weight: bold;">Cancelar</a>
+            <a href="/EmpresaHospedaje/Menu?idEmpresa=no" style="background-color: #c0392b; color: white; padding: 10px 25px; border-radius: 5px; text-decoration: none; font-weight: bold;">Cancelar</a>
         </div>
     </form>
 </div>
