--- a/codigo/GestionHotelera/Views/EmpresaHospedaje/EditarPerfil.cshtml
+++ b/codigo/GestionHotelera/Views/EmpresaHospedaje/EditarPerfil.cshtml
@@ -86,6 +86,6 @@
     <!-- Botones -->
     <div style="text-align: center; margin-top: 20px;">
         <button class="btn btn-success">Guardar cambios</button>
-        <a href="/EmpresaHospedaje/Menu" class="btn btn-danger">Cancelar</a>
+        <a href="/EmpresaHospedaje/Menu?idEmpresa=no" class="btn btn-danger">Cancelar</a>
     </div>
 </div>
