--- a/codigo/GestionHotelera/Views/EmpresaHospedaje/VerFacturaciones.cshtml
+++ b/codigo/GestionHotelera/Views/EmpresaHospedaje/VerFacturaciones.cshtml
@@ -9,7 +9,7 @@
 
 
 <div class="contenedor">
-    <a href="/EmpresaHospedaje/Menu" class="volver-btn">← Atrás</a>
+    <a href="/EmpresaHospedaje/Menu?idEmpresa=no" class="volver-btn">← Atrás</a>
 
     <h2>Ver Facturas y Reservas</h2>
 
