--- a/codigo/GestionHotelera/Views/EmpresaRecreacion/EditarActividad.cshtml
+++ b/codigo/GestionHotelera/Views/EmpresaRecreacion/EditarActividad.cshtml
@@ -23,7 +23,7 @@
 
         <div style="text-align: center; display: flex; justify-content: center; gap: 20px;">
             <button type="submit" style="background-color: #4CAF50; color: white; padding: 10px 20px; font-weight: bold; border: none; border-radius: 5px;">Guardar</button>
-            <a href="/EmpresaRecreacion/Menu" style="background-color: #a94442; color: white; padding: 10px 20px; font-weight: bold; text-decoration: none; border-radius: 5px;">Cancelar</a>
+            <a href="/EmpresaHospedaje/Menu?idEmpresa=no" style="background-color: #a94442; color: white; padding: 10px 20px; font-weight: bold; text-decoration: none; border-radius: 5px;">Cancelar</a>
         </div>
     </form>
 </div>
