--- a/codigo/GestionHotelera/Views/EmpresaRecreacion/EliminarPerfil.cshtml
+++ b/codigo/GestionHotelera/Views/EmpresaRecreacion/EliminarPerfil.cshtml
@@ -22,7 +22,7 @@
     <!-- Botones -->
     <div style="display: flex; justify-content: center; gap: 20px;">
         <button onclick="confirmarEliminacion()" style="background-color: #c62828; color: white; padding: 12px 20px; border: none; border-radius: 6px; font-weight: bold;">Sí, eliminar perfil</button>
-        <a href="/EmpresaRecreacion/Menu" style="background-color: #6c757d; color: white; padding: 12px 20px; border-radius: 6px; text-decoration: none; font-weight: bold;">Cancelar</a>
+        <a href="/EmpresaHospedaje/Menu?idEmpresa=no" style="background-color: #6c757d; color: white; padding: 12px 20px; border-radius: 6px; text-decoration: none; font-weight: bold;">Cancelar</a>
     </div>
 </div>
 
@@ -30,8 +30,8 @@
     <script>
         function confirmarEliminacion() {
             if (confirm("¿Confirmas que deseas eliminar tu perfil permanentemente?")) {
-                alert("Perfil eliminado correctamente.");
-                window.location.href = "/"; // Aquí puedes cambiar a una página de despedida si deseas
+                alert("Esta funcionalidad esta pendiende de agregar.");
+                window.location.href = "/"; 
             }
         }
     </script>
