--- a/codigo/GestionHotelera/Views/EmpresaHospedaje/AñadirHabitacion.cshtml
+++ b/codigo/GestionHotelera/Views/EmpresaHospedaje/AñadirHabitacion.cshtml
@@ -31,7 +31,7 @@
 
         <div style="display: flex; justify-content: space-between;">
             <button type="submit" style="padding: 10px 25px; background-color: #2ecc71; border: none; color: white; border-radius: 6px; font-weight: bold;">Guardar</button>
-            <a href="/EmpresaHospedaje/Menu" style="padding: 10px 25px; background-color: #c0392b; color: white; border-radius: 6px; text-decoration: none; font-weight: bold;">Cancelar</a>
+            <a href="/EmpresaHospedaje/Menu?idEmpresa=no" style="padding: 10px 25px; background-color: #c0392b; color: white; border-radius: 6px; text-decoration: none; font-weight: bold;">Cancelar</a>
         </div>
     </form>
 </div>
