--- a/codigo/GestionHotelera/Views/EmpresaHospedaje/EliminarPerfil.cshtml
+++ b/codigo/GestionHotelera/Views/EmpresaHospedaje/EliminarPerfil.cshtml
@@ -9,7 +9,7 @@
     <p style="font-size: 16px; text-align: center; margin-bottom: 25px;">Esta acción eliminará <strong>Hotel Paraíso Caribeño</strong> y todos sus datos de forma permanente.</p>
 
     <div style="display: flex; justify-content: center; gap: 20px;">
-        <a href="/EmpresaHospedaje/Menu" style="background-color: #7f8c8d; color: white; padding: 10px 20px; border-radius: 6px; text-decoration: none;">Cancelar</a>
+        <a href="/EmpresaHospedaje/Menu?idEmpresa=no" style="background-color: #7f8c8d; color: white; padding: 10px 20px; border-radius: 6px; text-decoration: none;">Cancelar</a>
         <a href="#" style="background-color: #e74c3c; color: white; padding: 10px 20px; border-radius: 6px; text-decoration: none;">Confirmar eliminación</a>
     </div>
 </div>
