--- a/codigo/GestionHotelera/Views/EmpresaHospedaje/VerReservasActivas.cshtml
+++ b/codigo/GestionHotelera/Views/EmpresaHospedaje/VerReservasActivas.cshtml
@@ -4,7 +4,7 @@
 }
 @model GestionHotelera.Models.VistasModel.VerReservasActivasViewModel;
 <div style="padding: 30px;">
-    <a href="/EmpresaHospedaje/Menu" style="background-color: #6c757d; color: white; padding: 8px 14px; border-radius: 6px; text-decoration: none;">← Atrás</a>
+    <a href="/EmpresaHospedaje/Menu?idEmpresa=no" style="background-color: #6c757d; color: white; padding: 8px 14px; border-radius: 6px; text-decoration: none;">← Atrás</a>
 
     <h2 style="margin-top: 20px;">Reservas Activas</h2>
 
