--- a/codigo/GestionHotelera/Views/EmpresaRecreacion/Menu.cshtml
+++ b/codigo/GestionHotelera/Views/EmpresaRecreacion/Menu.cshtml
@@ -9,17 +9,33 @@
     <!-- ENCABEZADO -->
     <div style="display: flex; justify-content: space-between; align-items: center;">
         <h1 style="font-size: 28px; color: #2c3e50;">@Model.DatosEmpresa.NombreEmpresa <span style="color: #27ae60; font-size: 18px;">SERVICIOS</span></h1>
-        <a href="/" style="background-color: #444; color: white; padding: 10px 20px; border-radius: 6px; text-decoration: none;">← Atrás</a>
+        
+
+        @if (Model.TipoCuenta == "Empresa")
+        {
+            @* <a href="/EmpresaHospedaje/Menu?idEmpresa=no" style="background-color: #444; color: white; padding: 10px 20px; border-radius: 6px; text-decoration: none;">← Atrás</a> *@
+
+        } else
+        {
+            <a href="/Cliente/Menu" style="background-color: #444; color: white; padding: 10px 20px; border-radius: 6px; text-decoration: none;">← Atrás</a>
+            
+        }
+
     </div>
 
     <!-- BOTONES DE ACCIONES -->
-    <div style="margin-top: 20px; display: flex; gap: 10px; flex-wrap: wrap;">
-        <a href="/EmpresaRecreacion/NuevoServicio" style="background-color: #27ae60; color: white; padding: 10px 15px; border-radius: 5px; text-decoration: none;">• Nuevo Servicio</a>
-        <a href="/EmpresaRecreacion/NuevaActividad" style="background-color: #17a2b8; color: white; padding: 10px 15px; border-radius: 5px; text-decoration: none;">• Nueva Actividad</a>
-        <a href="/EmpresaRecreacion/EditarPerfil" style="background-color: #f1c40f; color: black; padding: 10px 15px; border-radius: 5px; text-decoration: none;">• Editar Perfil</a>
-        <a href="/EmpresaRecreacion/EliminarPerfil" style="background-color: #e74c3c; color: white; padding: 10px 15px; border-radius: 5px; text-decoration: none;">• Eliminar perfil</a>
-        <a href="/EmpresaRecreacion/EditarActividad" style="background-color: #d4ac0d; color: black; padding: 10px 15px; border-radius: 5px; text-decoration: none;">• Editar actividad</a>
-    </div>
+    @if (Model.TipoCuenta == "Empresa")
+    {
+        <div style="margin-top: 20px; display: flex; gap: 10px; flex-wrap: wrap;">
+            <a href="/EmpresaRecreacion/NuevoServicio" style="background-color: #27ae60; color: white; padding: 10px 15px; border-radius: 5px; text-decoration: none;">• Nuevo Servicio</a>
+            <a href="/EmpresaRecreacion/NuevaActividad" style="background-color: #17a2b8; color: white; padding: 10px 15px; border-radius: 5px; text-decoration: none;">• Nueva Actividad</a>
+            <a href="/EmpresaRecreacion/EditarPerfil" style="background-color: #f1c40f; color: black; padding: 10px 15px; border-radius: 5px; text-decoration: none;">• Editar Perfil</a>
+            <a href="/EmpresaRecreacion/EliminarPerfil" style="background-color: #e74c3c; color: white; padding: 10px 15px; border-radius: 5px; text-decoration: none;">• Eliminar perfil</a>
+            <a href="/EmpresaRecreacion/EditarActividad" style="background-color: #d4ac0d; color: black; padding: 10px 15px; border-radius: 5px; text-decoration: none;">• Editar actividad</a>
+        </div>
+        
+    }
+
 
     <!-- INFORMACIÓN DE CONTACTO -->
     <div style="margin-top: 30px; display: flex; gap: 20px;">
@@ -70,7 +86,7 @@
 
             @foreach(var servicios in Model.ServiciosEmpresaRecreacion)
             {
-                <div style="background-color: #2ecc71; color: white; padding: 10px 20px; border-radius: 5px; text-align: center;">
+                <div onclick="location.href='@Url.Action("VerServicio", "EmpresaRecreacion", new { idServicio = servicios.IdServicio })'" style="background-color:  #2ecc71; color: white; padding: 10px 20px; border-radius: 5px; text-align: center;">
                     <div>@servicios.NombreServicio</div>
                     <div style="font-weight: bold; margin-top: 5px;">$@servicios.Precio USD</div>
                 </div>
@@ -101,9 +117,6 @@
                     <p style="margin-top: 5px;">@actividad.DescripcionActividad</p>
                 </div>
             } 
-
-
-
 
         </div>
     </div>
