--- a/codigo/GestionHotelera/Views/EmpresaRecreacion/NuevoServicio.cshtml
+++ b/codigo/GestionHotelera/Views/EmpresaRecreacion/NuevoServicio.cshtml
@@ -53,7 +53,7 @@
 
         <div style="margin-top: 30px; display: flex; gap: 20px;">
             <button type="submit" style="padding: 12px 25px; background-color: #388e3c; color: white; font-weight: bold; border: none; border-radius: 6px;">Guardar</button>
-            <a href="/EmpresaRecreacion/Menu" style="padding: 12px 25px; background-color: #c62828; color: white; font-weight: bold; border: none; border-radius: 6px; text-decoration: none;">Cancelar</a>
+            <a href="/EmpresaHospedaje/Menu?idEmpresa=no" style="padding: 12px 25px; background-color: #c62828; color: white; font-weight: bold; border: none; border-radius: 6px; text-decoration: none;">Cancelar</a>
         </div>
     
     
