--- a/codigo/GestionHotelera/Views/EmpresaRecreacion/servicios/Detalles.cshtml
+++ b/codigo/GestionHotelera/Views/EmpresaRecreacion/servicios/Detalles.cshtml
@@ -2,6 +2,7 @@
     ViewData["Title"] = "Detalle del Servicio";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@model GestionHotelera.Models.VistasModel.VerDetallesServicioRecreacionViewModel;
 
 <div style="font-family: 'Segoe UI', sans-serif; padding: 20px; background-color: #2c2c2c; color: white;">
     <!-- Botón volver -->
