Correcciones en las rutas de navegacion

--- a/codigo/GestionHotelera/Views/EmpresaHospedaje/AñadirHabitacion.cshtml
+++ b/codigo/GestionHotelera/Views/EmpresaHospedaje/AñadirHabitacion.cshtml
@@ -13,7 +13,7 @@
 
         <div style="margin-bottom: 20px;">
             <label for="numero" style="font-weight: bold; display: block; margin-bottom: 6px;">Número de la habitación:</label>
-            <input type="text" id="numero" name="NumeroHabitacion" placeholder="Ej: 101" style="width: 100%; padding: 10px; border: 1px solid #ccc; border-radius: 6px;" />
+            <input type="text" id="numero" name="NumeroHabitacion" placeholder="Ej: 101" min="0" style="width: 100%; padding: 10px; border: 1px solid #ccc; border-radius: 6px;" />
         </div>
 
         <div style="margin-bottom: 30px;">
