--- a/codigo/GestionHotelera/Views/Cuenta/RegisterCliente.cshtml
+++ b/codigo/GestionHotelera/Views/Cuenta/RegisterCliente.cshtml
@@ -82,7 +82,7 @@
     <form id="formRegistrarCliente">
  
         <div class="form-group">
-            <label for="cedula">Cédula</label>
+            <label for="cedula">Cedula</label>
             <input type="text" id="cedula" name="Cedula" required />
         </div>
 
@@ -94,6 +94,7 @@
         <div class="form-group">
             <label for="tipoIdentificacion">Tipo de identificación</label>
             <select id="tipoIdentificacion" name="TipoIdentificacion" required>
+                <option value="0" disabled selected>Seleccione un tipo de identificacion...</option>
                 <option value="Nacional">Nacional</option>
                 <option value="TIM">Cedula de menores</option>
                 <option value="DIMEX">DIMEX</option>
@@ -105,6 +106,7 @@
             <label for="pais">País de residencia</label>
             @* <input type="text" id="pais" name="PaisResidencia" required /> *@
             <select id="pais" name="paisResidencia" required>
+                <option value="" disabled selected>Seleccione un pais...</option>
                 @foreach (var pais in Model.Paises)
                 {
                     <option value="@pais.IdPais">@pais.NombrePais</option>
@@ -117,7 +119,7 @@
             <div class="form-group">
                 <label for="provincia">Provincia</label>
                 <select id="provincia" name="IdProvincia">
-                    @* <option value="">Seleccione una provincia</option> *@
+                    <option value="" disabled selected>Seleccione una provincia...</option>
                     @foreach (var provincia in Model.Provincias)
                     {
                         <option value="@provincia.IdProvincia">@provincia.NombreProvincia</option>
@@ -128,14 +130,14 @@
             <div class="form-group">
                 <label for="canton">Cantón</label>
                 <select id="canton" name="IdCanton">
-                    @* <option value="">Seleccione un cantón</option> *@
+                    <option value="0" disabled selected>Seleccione un canton...</option>
                 </select>
             </div>
 
             <div class="form-group">
                 <label for="distrito">Distrito</label>
                 <select id="distrito" name="IdDistrito">
-                    @* <option value="">Seleccione un distrito</option> *@
+                    <option value="0" disabled selected>Seleccione un distrito...</option>
                 </select>
             </div>
         </div>
