--- a/codigo/GestionHotelera/Views/Cuenta/RegisterRecreacion.cshtml
+++ b/codigo/GestionHotelera/Views/Cuenta/RegisterRecreacion.cshtml
@@ -94,7 +94,7 @@
         <div class="form-group">
             <label for="provincia">Provincia</label>
             <select id="provincia" name="Provincia">
-                <option value="0">Seleccione una provincia</option>
+                <option value="0" disabled selected>Seleccione una provincia</option>
                 @foreach (var provincia in Model.Provincias)
                 {
                     <option value="@provincia.IdProvincia">@provincia.NombreProvincia</option>
@@ -105,14 +105,14 @@
         <div class="form-group">
             <label for="canton">Cantón</label>
             <select id="canton" name="Canton">
-                <option value="0">Seleccione un cantón</option>
+                <option value="0" disabled selected>Seleccione un canton</option>
             </select>
         </div>
 
         <div class="form-group">
             <label for="distrito">Distrito</label>
             <select id="distrito" name="Distrito">
-                <option value="0">Seleccione un distrito</option>
+                <option value="0" disabled selected>Seleccione un distrito</option>
             </select>
         </div>
 
