--- a/codigo/GestionHotelera/Views/Shared/_Layout.cshtml
+++ b/codigo/GestionHotelera/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                    @* <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
@@ -28,9 +28,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Cliente" asp-action="Menu">Menú Cliente</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Cliente" asp-action="Menu">Menu Cliente</a>
                         </li>
-                    </ul>
+                    </ul> *@
                 </div>
             </div>
         </nav>
