--- a/codigo/GestionHotelera/Views/Cuenta/Login.cshtml
+++ b/codigo/GestionHotelera/Views/Cuenta/Login.cshtml
@@ -72,7 +72,7 @@
 }
 
 <div class="form-container">
-    <h2>Iniciar Sesión</h2>
+    <h2>Iniciar Sesion</h2>
 
     <form method="post" action="/Cuenta/Login">
         <div class="form-group">
