--- a/codigo/GestionHotelera/Views/EmpresaRecreacion/VerServicio.cshtml
+++ b/codigo/GestionHotelera/Views/EmpresaRecreacion/VerServicio.cshtml
@@ -32,7 +32,7 @@
 
 
 
-    <!-- Información del servicio -->
+    <!-- Informacion del servicio -->
     <div style="display: flex; flex-wrap: wrap; gap: 20px; margin-bottom: 30px;">
         <div style="flex: 1; min-width: 250px;">
             <div style="background-color: #3a3a3a; padding: 15px; border-radius: 5px; margin-bottom: 10px;">
@@ -71,7 +71,7 @@
 
         @foreach (var actividad in Model.DatosServicio.ListaActividades)
         {
-            <div style="background-color: #333; color: white; padding: 15px; border-radius: 5px; width: 300px;">
+            <div style="background-color: #333; color: white; padding: 15px; border-radius: 5px; width: 300px; margin-bottom: 5px;">
                 <strong style="font-size: 18px;">@actividad.NombreActividad</strong>
                 <p style="margin-top: 5px;">@actividad.DescripcionActividad</p>
             </div>
